<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_drawer_all_files"
            android:icon="@drawable/ic_d_item_one"
            android:title="@string/nav_drawer_all_files" />

        <item
            android:id="@+id/nav_drawer_favorite"
            android:icon="@drawable/ic_d_item_two"
            android:title="@string/nav_drawer_favorite" />

        <item
            android:id="@+id/nav_drawer_rate_us"
            android:icon="@drawable/ic_d_item_three"
            android:title="@string/nav_drawer_rate_us" />

        <item
            android:id="@+id/nav_drawer_share"
            android:icon="@drawable/ic_d_item_four"
            android:title="@string/nav_drawer_share" />

        <item
            android:id="@+id/nav_drawer_privacy"
            android:icon="@drawable/ic_d_item_five"
            android:title="@string/nav_drawer_privacy" />

    </group>
</menu>