<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/btn_bg_card"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_minus1sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/arrange_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/arrange_radio_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest_modification_first" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/arrange_radio_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oldest_modification_first" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/arrange_radio_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_a_z" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/arrange_radio_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_z_a" />

        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/arrange_cancel"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/arrange_ok"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/btn_bg_splash"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>



